# tetratto

./: .env  Cargo.toml  README.md  SECURITY.md  justfile  tetratto.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: docs.yml  rust-clippy.yml
crates/app/: Cargo.toml
crates/app/src/: assets.rs  avif.rs  macros.rs  main.rs  sanitize.rs
crates/app/src/langs/: en-US.toml
crates/app/src/public/css/: style.css
crates/app/src/public/html/: components.html  macros.html  root.html
crates/app/src/public/html/auth/: base.html  login.html  register.html
crates/app/src/public/html/communities/: base.html  create_post.html  feed.html  list.html  members.html  post.html  question.html  questions.html  search.html  settings.html
crates/app/src/public/html/misc/: error.html  index.html  markdown.html  notifications.html  requests.html
crates/app/src/public/html/mod/: audit_log.html  file_report.html  ip_bans.html  profile.html  reports.html  warnings.html
crates/app/src/public/html/profile/: base.html  followers.html  following.html  posts.html  private.html  settings.html  warning.html
crates/app/src/public/html/timelines/: all.html  all_questions.html  following.html  following_questions.html  home.html  home_questions.html  popular.html  popular_questions.html
crates/app/src/public/js/: atto.js  loader.js  me.js
crates/app/src/routes/: assets.rs  mod.rs
crates/app/src/routes/api/v1/: mod.rs  notifications.rs  reactions.rs  reports.rs  requests.rs  util.rs
crates/app/src/routes/api/v1/auth/: images.rs  ipbans.rs  mod.rs  profile.rs  social.rs  user_warnings.rs
crates/app/src/routes/api/v1/communities/: communities.rs  images.rs  mod.rs  posts.rs  questions.rs
crates/app/src/routes/api/v1/journal/: entries.rs  journals.rs  mod.rs  pages.rs  posts.rs
crates/app/src/routes/pages/: auth.rs  communities.rs  misc.rs  mod.rs  mod_panel.rs  profile.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/cache/: mod.rs  no_cache.rs  redis.rs
crates/core/src/database/: audit_log.rs  auth.rs  common.rs  communities.rs  entries.rs  ipbans.rs  ipblocks.rs  journals.rs  memberships.rs  mod.rs  notifications.rs  pages.rs  posts.rs  questions.rs  reactions.rs  reports.rs  requests.rs  user_warnings.rs  userblocks.rs  userfollows.rs
crates/core/src/database/drivers/: common.rs  mod.rs  postgres.rs  sqlite.rs
crates/core/src/database/drivers/sql/: create_audit_log.sql  create_auditlog.sql  create_communities.sql  create_entries.sql  create_ipbans.sql  create_ipblocks.sql  create_journals.sql  create_memberships.sql  create_notifications.sql  create_pages.sql  create_posts.sql  create_questions.sql  create_reactions.sql  create_reports.sql  create_requests.sql  create_user_warnings.sql  create_userblocks.sql  create_userfollows.sql  create_users.sql
crates/core/src/model/: auth.rs  communities.rs  communities_permissions.rs  journal.rs  journal_permissions.rs  mod.rs  moderation.rs  permissions.rs  reactions.rs  requests.rs
crates/l10n/: Cargo.toml
crates/l10n/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: hash.rs  lib.rs  markdown.rs  snow.rs  time.rs
crates/tetratto_core/: Cargo.toml
crates/tetratto_core/src/: config.rs
crates/tetratto_core/src/database/: auth.rs  mod.rs
crates/tetratto_core/src/database/drivers/: postgres.rs  sqlite.rs
crates/tetratto_core/src/database/drivers/sql/: create_users.sql
crates/tetratto_core/src/model/: auth.rs  mod.rs
example/: .gitignore  tetratto.toml
example/html/: index.html
sql_changes/: questions_context.sql  questions_ip.sql  questions_likes.sql  users_post_count.sql  users_request_count.sql  users_totp.sql
src/: config.rs  macros.rs  main.rs
src/data/: assets.rs  manager.rs  mod.rs  model.rs
src/public/css/: style.css
src/public/html/: root.html
src/public/html/auth/: base.html  login.html  register.html
src/public/js/: atto.js
src/routes/: assets.rs  mod.rs
src/routes/api/v1/: auth.rs  mod.rs
