[workspace]
resolver = "2"
members = ["crates/app", "crates/shared", "crates/core", "crates/l10n"]
package.authors = ["trisuaso"]
package.repository = "https://github.com/trisuaso/tetratto"
package.license = "AGPL-3.0-or-later"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
panic = "unwind"
strip = true
incremental = true
