[package]
name = "tetratto-core"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["dep:tokio-postgres", "dep:bb8-postgres"]
sqlite = ["dep:rusqlite"]
redis = ["dep:redis"]
default = ["sqlite", "redis"]

[dependencies]
pathbufd = "0.1.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
tetratto-shared = { path = "../shared" }
tetratto-l10n = { path = "../l10n" }
serde_json = "1.0.140"

redis = { version = "0.29.2", optional = true }

rusqlite = { version = "0.34.0", optional = true }

tokio-postgres = { version = "0.7.13", optional = true }
bb8-postgres = { version = "0.9.0", optional = true }
bitflags = "2.9.0"
