[package]
name = "tetratto-shared"
version = "1.0.3"
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ammonia = "4.0.0"
chrono = "0.4.40"
comrak = "0.37.0"
hex_fmt = "0.3.0"
num-bigint = "0.4.6"
rand = "0.9.0"
serde = "1.0.219"
sha2 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4"] }
